# Early-Bird-Gazette

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-07-01-p1-core-storage-schema.md
docs/superpowers/specs/: 2026-07-01-early-bird-gazette-design.md
gazette/: migrations.py  models.py  repo.py  storage.py
tests/: conftest.py  test_capabilities.py  test_fts.py  test_migrations.py  test_models.py  test_repo.py  test_schema.py  test_smoke.py  test_storage.py  test_vec.py
